# cpp-test-project

./: .gitignore  CMakeLists.txt  README.md  generate-project-clean.bat  generate-project-loop.bat  generate-project.bat  generate.bat  open-in-vs.bat
Source/: entry-point.hpp  main.cpp  update-cycle.hpp
